--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "https://igor2532.github.io/reservation",
+  "homepage": "https://igor2532.github.io/reservation",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
